@@ -21,7 +21,7 @@ and link, not to find model files during code generation.</div>
 
 <p>Build Paths consist of a series of search paths, used to find other models.</p>
 
-<h3>Search Path Conents</h3>
+<h3>Search Path Contents</h3>
 
 <p>Each search path consists of two parts:</p>
 
@@ -40,22 +40,6 @@ and link, not to find model files during code generation.</div>
 
 <div class="note">Should the last build path be deleted from a model file, use the Outline view, navigate to searchLocations and select Add Child in its context menu.</div>
 
-<h2>Target Directory</h2>
 
-<p>The target directory can be selected using the Browse button next to the Target Directory text field.  Navigate to the desired generation directory and hit OK.</p>
-
-<div class="note">The code generator will create the target directory if it does not exist.  
-However, the Target Selection dialog has no interface for creating a directory.  In this case, the 
-target directory can be typed into the Target Directory text box.</div>
-
-<h2>Generation Buttons</h2>
-
-<p>Also on the Generate tab are a series of Generate buttons.  These buttons are used to generate the various output files.</p>
-
-<p>Next to each generate button is the name of the file it will generate, based upon the model name.</p>
-
-<h3>Generate All Button</h3>
-
-<p>The generate all button is a shortcut for hitting each pressing each generate button.</p>
 </body>
 </html>
