@@ -1,3 +1,9 @@
+Fri Apr 22 19:13:37 UTC 2011  Byron Harris  <harrisb@ociweb.com>
+
+        * tools/modeling/plugins/org.opendds.modeling.help/html/codegen/tasks/integration.html:
+
+	  Removed sections that were a copy from generate.html. Fixed typo.
+
 Fri Apr 15 15:08:28 UTC 2011  Byron Harris  <harrisb@ociweb.com>
 
         * tools/modeling/plugins/org.opendds.modeling.help/tocreference.xml:
